--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
   	<meta name="description" content="Your description goes here">
   	<meta name="keywords" content="one, two, three">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Google Font Links (Poppins - Feel free to change the font) -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 		
-		<title>Blank Template</title>
+		<title>Learn more about Ableton - maker of Live and Push | Ableton</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<header>
+			<div class="navigation">
+				<div class="nav-left">
+					<img src="images/ableton-logo.jpg" alt="">
+					<nav class="links">
+						<ul>
+							<li><a href="#">Live</a></li>
+							<li><a href="#">Push</a></li>
+							<li><a href="#">Note</a></li>
+							<li><a href="#">Link</a></li>
+							<li><a href="#">Shop</a></li>
+							<li><a href="#">Packs</a></li>
+							<li><a href="#">Help</a></li>
+							<li><a href="#">More +</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="nav-right">
+					<p><a href="#">Try Live 12 for free</a></p>
+					<p><a href="#">Log in or register</a></p>
+				</div>
+			</div>
+		</header>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
