Added hero section and some text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
 					<p><a href="#">Log in or register</a></p>
 				</div>
 			</div>
+			<nav class="about-nav">
+				<ul>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Jobs</a></li>
+					<li><a href="#">Apprenticeships</a></li>
+				</ul>
+			</nav>
 		</header>
+
+		<main>
+			<section class="hero-section">
+				<span>Ableton</span>
+			</section>
+			<section class="text-container">
+				<p class="text-large">We make <span class="accent-blue">Live</span>, <span class="accent-blue">Push</span>, <span class="accent-blue">Note</span>, and <span class="accent-blue">Link</span> — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.</p>
+				<p class="text-small">Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and arists from across the world.</p>
+			</section>
+		</main>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
