Added embedded video and second text section

--- a/index.html
+++ b/index.html
@@ -1,65 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-  	<meta charset="utf-8">
-  	<meta name="description" content="Your description goes here">
-  	<meta name="keywords" content="one, two, three">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Your description goes here" />
+    <meta name="keywords" content="one, two, three" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<!-- Google Font Links (Poppins - Feel free to change the font) -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Google Font Links (Poppins - Feel free to change the font) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-		
-		<title>Learn more about Ableton - maker of Live and Push | Ableton</title>
+    <title>Learn more about Ableton - maker of Live and Push | Ableton</title>
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		<header>
-			<div class="navigation">
-				<div class="nav-left">
-					<img src="images/ableton-logo.jpg" alt="">
-					<nav class="links">
-						<ul>
-							<li><a href="#">Live</a></li>
-							<li><a href="#">Push</a></li>
-							<li><a href="#">Note</a></li>
-							<li><a href="#">Link</a></li>
-							<li><a href="#">Shop</a></li>
-							<li><a href="#">Packs</a></li>
-							<li><a href="#">Help</a></li>
-							<li><a href="#">More +</a></li>
-						</ul>
-					</nav>
-				</div>
-				<div class="nav-right">
-					<p><a href="#">Try Live 12 for free</a></p>
-					<p><a href="#">Log in or register</a></p>
-				</div>
-			</div>
-			<nav class="about-nav">
-				<ul>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Jobs</a></li>
-					<li><a href="#">Apprenticeships</a></li>
-				</ul>
-			</nav>
-		</header>
+    <!-- external CSS link -->
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="navigation">
+        <div class="nav-left">
+          <img src="images/ableton-logo.jpg" alt="" />
+          <nav class="links">
+            <ul>
+              <li><a href="#">Live</a></li>
+              <li><a href="#">Push</a></li>
+              <li><a href="#">Note</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">Packs</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">More +</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="nav-right">
+          <p><a href="#">Try Live 12 for free</a></p>
+          <p><a href="#">Log in or register</a></p>
+        </div>
+      </div>
+      <nav class="about-nav">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Apprenticeships</a></li>
+        </ul>
+      </nav>
+    </header>
 
-		<main>
-			<section class="hero-section">
-				<span>Ableton</span>
-			</section>
-			<section class="text-container">
-				<p class="text-large">We make <span class="accent-blue">Live</span>, <span class="accent-blue">Push</span>, <span class="accent-blue">Note</span>, and <span class="accent-blue">Link</span> — unique software and hardware for music creation and performance. With these products, our community of users creates amazing things.</p>
-				<p class="text-small">Ableton was founded in 1999 and released the first version of Live in 2001. Our products are used by a community of dedicated musicians, sound designers, and arists from across the world.</p>
-			</section>
-		</main>
-
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
+    <main>
+      <section class="hero-section">
+        <span>Ableton</span>
+      </section>
+      <section class="text-container">
+        <p class="text-large">
+          We make <span class="accent-blue">Live</span>,
+          <span class="accent-blue">Push</span>,
+          <span class="accent-blue">Note</span>, and
+          <span class="accent-blue">Link</span> — unique software and hardware
+          for music creation and performance. With these products, our community
+          of users creates amazing things.
+        </p>
+        <p class="text-small">
+          Ableton was founded in 1999 and released the first version of Live in
+          2001. Our products are used by a community of dedicated musicians,
+          sound designers, and arists from across the world.
+        </p>
+      </section>
+    </main>
+    <img src="" alt="" />
+    <img src="" alt="" />
+    <section class="text-container">
+      <p class="text-large">
+        Making music isn't easy. It takes time, effort, and learning. But when
+        you're in the flow, it's incredibly rewarding
+      </p>
+      <p class="text-small">
+        We feel the same way about making Ableton products. The driving force
+        behind Ableton is our passion for what we make, and the people we make
+        it for
+      </p>
+    </section>
+    <section class="videoSection">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/WMg4Y4q6FQ0?si=m54REjLHBeYg4OdN"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </section>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
