--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p class="text-small">
         We feel the same way about making Ableton products. The driving force
         behind Ableton is our passion for what we make, and the people we make
-        it for
+        it for.
       </p>
     </section>
     <section class="videoSection">
@@ -96,6 +96,20 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
+    </section>
+    <section class="text-container">
+      <p class="text-large">
+        We are more than 350 people from 30 different countries divided between
+        our headquarters in Berlin and our offices in Los Angeles and Tokyo.
+      </p>
+      <p class="text-small">
+        Most of us are active musicians, producers, and DJs, and many of us use
+        Live and Push every day. We come from a wide range of cultureal and
+        professional backgrounds. Some of us have PhDs, some are self-taught,
+        and most of us are somewhere in between. What connects us is the shared
+        belief that each of us has the skills and knowledge to contribute to
+        something big: helping to shape the future of music culture.
+      </p>
     </section>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
