added html for footer

--- a/index.html
+++ b/index.html
@@ -111,6 +111,78 @@
         something big: helping to shape the future of music culture.
       </p>
     </section>
+
+    <footer>
+      <section class="footer">
+
+        <div>
+          <h3>Ableton</h3>
+        </div>
+
+        <div>
+          <ul>
+            <a href="#"><li>Register Live or Push ></li></a>
+            <a href="#"><li>About Ableton ></li></a>
+            <a href="#"><li>Jobs ></li></a>
+          </ul>
+          <ul>
+            <!-- Social media logos to go here -->
+          </ul>
+        </div>
+
+        <div>
+          <h4>Education</h4>
+          <ul>
+            <a href="#"> <li>Offers for students and teachers ></li></a>
+            <a href="#"> <li>Ableton for the Classroom ></li></a>
+            <a href="#"> <li>Ableton for Colleges and Universities ></li></a>
+          </ul>
+        </div>
+
+        <div>
+          <h4>Sign up to our newsletter</h4>
+          <p>Enter your email address to stay up to date with the latest offers, tutorials, downloads, surveys and more.</p>
+          <input type="email" id="email" name="Email Address">
+          <button>Sign up</button>
+        </div>
+
+        <div>
+          <h4>Community</h4>
+          <ul>
+            <a href="#"> <li>Find Ableton User Groups ></li></a>
+            <a href="#"> <li>Find Certified Training ></li></a>
+            <a href="#"> <li>Become a Certified Trainer ></li></a>
+          </ul>
+        </div>
+
+        <div>
+          <h4>Language and Location</h4>
+          <!-- Drop down menus -->
+        </div>
+
+        
+         
+          <div>
+            <nav>
+              <ul>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Press Resources</a></li>
+                <li><a href="#">Legal Info</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Settings</a></li>
+                <li><a href="#">Imprint</a></li>
+              </ul>
+              <div>
+                <span>Made in Berlin</span>
+                <img src="images/ableton-logo.jpg" alt="" />
+              </div>
+            </nav>
+          </div>
+
+
+      </section> 
+    </footer>
+
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
